--- a/style.css
+++ b/style.css
@@ -57,7 +57,26 @@ header {
     background-color: #fff;
     display: flex;
     justify-content: space-between;
-    padding: 10px 0;
+    margin: 0 0 -30px 0;
+    padding: 10px 30px;
+}
+
+header a {
+    color: black;
+    background-image: linear-gradient(transparent 0%, transparent calc(50% - 9px), rgba(221, 139, 184, 0.3) calc(50% - 9px), rgba(221, 139, 184, 0.5) 100%);
+    transition: background-position 120ms 
+    ease-in-out 0s, padding 120ms 
+    ease-in-out 0s;
+    background-size: 100% 175%;
+    background-position: 0px 0px;
+}
+
+header .custom-logo-link {
+    background-image: none;
+}
+
+header a:hover {
+    color: palevioletred;
 }
 
 
@@ -81,10 +100,6 @@ header {
     height: 60px;
 }
 
-.site-branding .byline {
-
-}
-
 #site-navigation ul {
     display: flex;
     align-items: center;
@@ -92,6 +107,66 @@ header {
 }
 
 #site-navigation li {
+    font-family: "Permanent Marker", cursive;
+    font-size: 1.2rem;
+    font-weight: 600;
     list-style: none;
     padding: 0 20px 0 0;
+}
+
+h1.front-page-title {
+    display: block;
+    font-family: "Permanent Marker", cursive;
+    font-size: 5rem;
+    text-align: center !important;
+    width: 100%;
+    margin-top: -50px;
+    margin-right: auto;
+    margin-bottom: 0;
+    margin-left: auto;
+}
+
+.front-page-title > .skate-scenes-list-container > .skate-scenes-map-wrapper > h2,
+.front-page-title > .skate-scenes-list-container > h2 {
+    display: block;
+    font-family: "Permanent Marker", cursive;
+    font-size: 3rem;
+    text-align: center !important;
+    width: 100%;
+    margin-top: 100px;
+    margin-right: auto;
+    margin-bottom: 0;
+    margin-left: auto;
+}
+
+.map-notice {
+    display: none;
+}
+
+footer {
+    background-color: #333;
+    margin: 50px 0 0 0;
+    padding: 100px 50px;
+}
+
+footer, footer a {
+    color: white;
+}
+
+.footer-columns {
+    display: flex;
+}
+
+.footer-column-1 {
+    flex-grow: 4;
+}
+.footer-column-2 {
+    flex-grow: 1;
+}
+.footer-column-3 {
+    flex-grow: 1;
+}
+
+.footer-column-1 .white-wheel {
+    width: 200px;
 }
