--- a/style.css
+++ b/style.css
@@ -320,7 +320,7 @@ h1.front-page-title {
 
 footer {
     background-color: #333;
-    margin: 50px 0 0 0;
+    margin: 0;
     padding: 100px 50px;
 }
 
